--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,115 +1,137 @@
 /* CONTENTS */
 /*
-
+ 
     1. Global Utility Styles
-
+    
 
 
 
 */
+
 /* GLOBAL UTILITY STYLES */
+
+
+@font-face {
+    font-family: 'Bombardier';
+    src: url('fonts/Bombardier.ttf.woff') format('woff'),
+        url('fonts/Bombardier.ttf.svg#Bombardier') format('svg'),
+        url('fonts/Bombardier.ttf.eot'),
+        url('fonts/Bombardier.ttf.eot?#iefix') format('embedded-opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Krunch';
+    src: url('fonts/krunch_italic.ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+
 html {
-  font-size: 16px;
+    font-size: 16px;
 }
 
 body {
-  background: rgba(0, 0, 0, 1);
-  color: rgba(255, 255, 255, 1);
-  font-family: 'Lato', sans-serif;
-  -webkit-user-select: none;
-  -moz-user-select: -moz-none;
-  -ms-user-select: none;
-  user-select: none;
+    background: rgba(0, 0, 0, 1);
+    color: rgba(255, 255, 255, 1);
+    font-family: 'Lato', sans-serif;
+    -webkit-user-select: none;
+    -moz-user-select: -moz-none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 a {
-  color: rgba(255, 255, 255, 1);
-  font-family: 'Lato', sans-serif;
+    color: rgba(255, 255, 255, 1);
+    font-family: 'Lato', sans-serif;
+    font-weight: bold;
 }
 
 a:hover {
-  text-decoration: none;
-  color: rgba(255, 255, 255, 1);
+    text-decoration: none;
+    color: rgba(255, 255, 255, 1);
 }
 
 .grid-container {
-  display: grid;
-  grid-template-columns: 0.3fr 1fr;
-  grid-template-rows: 0.2fr 0.3fr 1.5fr;
-  grid-template-areas: "navbar navbar""teamFilter yearSlider""teamFilter mapSection";
-  grid-gap: 15px;
-  height: 100vh;
+    display: grid;
+    grid-template-columns: 0.3fr 1fr;
+    grid-template-rows: 0.2fr 0.3fr 1.5fr;
+    grid-template-areas: "navbar navbar""teamFilter yearSlider""teamFilter mapSection";
+    grid-gap: 15px;
+    height: 100vh;
 }
 
 .navbar {
-  grid-area: navbar;
-  padding: 0px 20px 0px 20px;
+    grid-area: navbar;
+    padding: 0px 20px 0px 20px;
 }
 
 .menuLink {
-  padding: 0 20px 0 20px;
+    padding: 0 20px 0 20px;
 }
 
 .teamFilter {
-  grid-area: teamFilter;
+    grid-area: teamFilter;
+    overflow-y: scroll;
 }
 
 .yearSlider {
-  grid-area: yearSlider;
+    grid-area: yearSlider;
 }
 
 .mapSection {
-  grid-area: mapSection;
-  height: 100%;
+    grid-area: mapSection;
+    height: 100%;
 }
 
 .mainLogo {
-  width: 150px;
+    width: 150px;
 }
 
 label {
-  margin-bottom: 0 !important;
+    margin-bottom: 0 !important;
 }
 
 /* CHECKBOX STYLES */
 input[type=checkbox] {
-  cursor: pointer;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  outline: 0
+    cursor: pointer;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: 0
 }
 
 input[type=checkbox]:after {
-  font-family: "Font Awesome 5 Free" !important;
-  font-weight: 900;
-  font-size: 12px;
-  content: "\f067";
-  color: rgba(107, 107, 107, 1);
+    font-family: "Font Awesome 5 Free" !important;
+    font-weight: 900;
+    font-size: 12px;
+    content: "\f067";
+    color: rgba(107, 107, 107, 1);
 }
 
 input[type=checkbox]:checked:after {
-  font-family: "Font Awesome 5 Free";
-  content: "\f00d";
-  color: rgba(107, 107, 107, 1);
+    font-family: "Font Awesome 5 Free";
+    content: "\f00d";
+    color: rgba(107, 107, 107, 1);
 }
 
 .checkDiv {
-  display: inline-flex;
-  margin: 10px;
+    display: inline-flex;
+    margin: 10px;
 }
 
 input[type=checkbox]:checked #checkBtn {
-  background: rgba(165, 165, 165, 1);
+    background: rgba(165, 165, 165, 1);
 }
 
 #checkBtn {
-  flex: 0 0 auto;
-  background-color: rgba(0, 0, 0, 1);
-  border: 3px solid rgba(107, 107, 107, 1);
-  border-radius: 6px;
-  color: rgba(107, 107, 107, 1);
-  font-size: 12px;
+    flex: 0 0 auto;
+    background-color: rgba(0, 0, 0, 1);
+    border: 3px solid rgba(107, 107, 107, 1);
+    border-radius: 6px;
+    color: rgba(107, 107, 107, 1);
+    font-size: 12px;
 }
 
 /*
@@ -122,167 +144,187 @@ input[type=checkbox]:checked #checkBtn {
     color: rgba(0, 0, 0, 1);
 }
 */
-#checkBtn input:checked+label {
-  background-color: #911;
-  color: #fff;
+
+#checkBtn input:checked + label {
+    background-color: #911;
+    color: #fff;
 }
 
 #checkBtn label {
-  justify-content: space-between;
-  align-items: center;
-  padding: 9px 5.5px 9px 5.5px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 9px 5.5px 9px 5.5px;
 }
 
 #checkBtn label span {
-  margin-right: 20px;
-  font-weight: 800;
+    margin-right: 20px;
+    font-weight: 800;
 }
 
 #checkBtn label input {
-  text-align: center;
-  min-width: 16px;
+    text-align: center;
+    min-width: 16px;
 }
+
 
 /* TIME SLIDER STYLES */
 input[type=range] {
-  -webkit-appearance: none;
-  width: 98%;
-  margin: 15px 0;
+    -webkit-appearance: none;
+    width: 98%;
+    margin: 15px 0;
 }
 
 input[type=range]:focus {
-  outline: none;
+    outline: none;
 }
 
 input[type=range]::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 6px;
-  cursor: pointer;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
-  background: #6b6b6b;
-  border-radius: 1px;
-  border: 0px solid rgba(0, 1, 1, 0);
+    width: 100%;
+    height: 6px;
+    cursor: pointer;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+    background: #6b6b6b;
+    border-radius: 1px;
+    border: 0px solid rgba(0, 1, 1, 0);
 }
 
 input[type=range]::-webkit-slider-thumb {
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
-  border: 1px solid rgba(0, 0, 0, 0.25);
-  height: 36px;
-  width: 16px;
-  border-radius: 5px;
-  background: #fde74d;
-  cursor: pointer;
-  -webkit-appearance: none;
-  margin-top: -15px;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+    border: 1px solid rgba(0, 0, 0, 0.25);
+    height: 36px;
+    width: 16px;
+    border-radius: 5px;
+    background: #fde74d;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -15px;
 }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #6e6e6e;
+    background: #6e6e6e;
 }
 
 input[type=range]::-moz-range-track {
-  width: 100%;
-  height: 6px;
-  cursor: pointer;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
-  background: #6b6b6b;
-  border-radius: 1px;
-  border: 0px solid rgba(0, 1, 1, 0);
+    width: 100%;
+    height: 6px;
+    cursor: pointer;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+    background: #6b6b6b;
+    border-radius: 1px;
+    border: 0px solid rgba(0, 1, 1, 0);
 }
 
 input[type=range]::-moz-range-thumb {
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
-  border: 1px solid rgba(0, 0, 0, 0.25);
-  height: 36px;
-  width: 16px;
-  border-radius: 5px;
-  background: #fde74d;
-  cursor: pointer;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+    border: 1px solid rgba(0, 0, 0, 0.25);
+    height: 36px;
+    width: 16px;
+    border-radius: 5px;
+    background: #fde74d;
+    cursor: pointer;
 }
 
 input[type=range]::-ms-track {
-  width: 100%;
-  height: 6px;
-  cursor: pointer;
-  background: transparent;
-  border-color: transparent;
-  color: transparent;
+    width: 100%;
+    height: 6px;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
 }
 
 input[type=range]::-ms-fill-lower {
-  background: #686868;
-  border: 0px solid rgba(0, 1, 1, 0);
-  border-radius: 2px;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+    background: #686868;
+    border: 0px solid rgba(0, 1, 1, 0);
+    border-radius: 2px;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
 }
 
 input[type=range]::-ms-fill-upper {
-  background: #6b6b6b;
-  border: 0px solid rgba(0, 1, 1, 0);
-  border-radius: 2px;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+    background: #6b6b6b;
+    border: 0px solid rgba(0, 1, 1, 0);
+    border-radius: 2px;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
 }
 
 input[type=range]::-ms-thumb {
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
-  border: 1px solid rgba(0, 0, 0, 0.25);
-  height: 36px;
-  width: 16px;
-  border-radius: 5px;
-  background: #fde74d;
-  cursor: pointer;
-  height: 6px;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+    border: 1px solid rgba(0, 0, 0, 0.25);
+    height: 36px;
+    width: 16px;
+    border-radius: 5px;
+    background: #fde74d;
+    cursor: pointer;
+    height: 6px;
 }
 
 input[type=range]:focus::-ms-fill-lower {
-  background: #6b6b6b;
+    background: #6b6b6b;
 }
 
 input[type=range]:focus::-ms-fill-upper {
-  background: #6e6e6e;
+    background: #6e6e6e;
 }
 
 #slider {
-  margin: 0px 15px 15px 15px;
+    margin: 0px 15px 15px 15px;
 }
 
 .yearList {
-  font-size: .8rem;
+    font-size: .8rem;
 }
 
 #map {
-  height: 100%;
-  width: 100%;
+    height: 100%;
+    width: 100%;
 }
 
 .filterSection-label {
-  color: rgba(257, 231, 77, 1);
-  padding: 0px 10px 0px 10px;
+    color: rgba(257, 231, 77, 1);
+    padding: 0px 10px 0px 10px;
 }
 
 .playerName {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
+    font-family: 'Bombardier', sans-serif;
+    white-space: nowrap;
+}
+
+.teamPosition-combo {
+    display: flex;
+    justify-content: space-between;
 }
 
 .lastName,
-.firstName {
-  font-family: 'Lato', sans-serif;
-  font-style: italic;
+.firstName,
+.uniformNumber {
+    font-family: 'Bombardier', sans-serif;
+    font-style: italic;
 }
 
 .lastName {
-  font-size: 1.2rem;
-  font-weight: bolder;
+    font-size: 1.8rem;
+    font-weight: 800;
+    color: rgba(143, 154, 174, 1);
 }
 
 .firstName {
-  font-size: 1rem;
+    font-size: 1.5rem;
+    font-weight: 400;
 }
 
+.playerPosition {
+    color: rgba(143, 154, 174, 1);
+    margin-bottom: 20px;
+}
+
+.uniformNumber,
+.teamName,
 .playerPosition,
 .playerHeight,
 .playerWeight,
 .lastSchool {
-  font-size: .8rem;
-  font-weight: bold;
+    font-family: 'Bombardier', sans-serif;
+    font-size: 1.2rem;
+    font-weight: bold;
 }
